# Woke-Pipeline

./: README.md  pyproject.toml  requirements.txt
WokeyTalky/: Woke_Pipeline.py  feedforward.py  prompt_loss.py  woke_pipeline_class.py
WokeyTalky.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
WokeyTalky/config/: settings.yaml
WokeyTalky/utils/: config_util.py  eval_util.py  gemini_generation.py  gpt_generation.py
tests/: test_woke_pipeline.py
