[project]
name = "WokeyTalky"
version = "0.1.1"
authors = [
  { name="Adam Nguyen", email="Adanato@vt.edu" },
]
description = "A scalable and dynamic pipeline set for generation of spurious features."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ruoxi-jia-group/Woke-Pipeline"
Issues = "https://github.com/ruoxi-jia-group/Woke-Pipeline/issues"